--- a/new/new.html
+++ b/new/new.html
@@ -12,38 +12,40 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
-			<td bgcolor="#EFEFEF"><font size="1">3.12<br> <i>June
-						25, 2014</i></font></td>
+			<td bgcolor="#EFEFEF"><font size="1">3.13<br> <i>September
+						26, 2014</i></font></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://projects.eclipse.org/projects/mylyn/releases/3.12/plan">
-					<font size="1">49</font><br> <font size="1">bugs</font>
+				href="https://projects.eclipse.org/projects/mylyn/releases/3.13/plan">
+					<font size="1">38</font><br> <font size="1">bugs</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community
-					contributions were provided by Gregory Amerson, Tim Cheung, Leo Dos Santos, James Kennedy, and Michael Keppler.
+					contributions were provided by Daniel Deady, Steve Elsemore, Michael Keppler, 
+					David King, Maarten Meijer, Guy Perron, and Leo Dos Santos. 
 					<br>Includes:
 					<a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.12">Mylyn
-						3.12</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.4">Mylyn
-						Builds 1.4</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.12">Mylyn
-						Commons 3.12</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.12">Mylyn
-						Context 3.12</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.1">Mylyn
-						Docs 2.1</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.3">Mylyn
-						Reviews 2.3</a>. <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.12">Mylyn
-						Tasks 3.12</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.4">Mylyn
-						Versions 1.4</a>.
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.13">Mylyn
+						3.13</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.5">Mylyn
+						Builds 1.5</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.13">Mylyn
+						Commons 3.13</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.13">Mylyn
+						Context 3.13</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.2">Mylyn
+						Docs 2.2</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.4">Mylyn
+						Reviews 2.4</a>. <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.13">Mylyn
+						Tasks 3.13</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.5">Mylyn
+						Versions 1.5</a>.
 			</font></td>
 		</tr>
 	</table>
 
 	<p>
 		<b>Also see the New &amp; Noteworthy for: <a
+			href="http://eclipse.org/mylyn/new/new-3.12.html">Mylyn 3.12</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.9.html">Mylyn 3.9</a>, <a
@@ -62,18 +64,21 @@
 	<hr size="1" />
 
 	<p>
-		<h1>New	in Mylyn 3.12</h1>
+		<h1>New	in Mylyn 3.13</h1>
 	</p>
 
+
+
 	<ul>
-		<li><a href="#context">Context</a></li>
-		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
 		<li><a href="#gerrit">Gerrit Connector</a></li>
+		<li><a href="#wikitext">WikiText</a></li>
+		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+		<li><a href="#bugzilla">Bugzilla Connector</a></li>
 		<li><a href="#framework">Framework and API</a></li>
 	</ul>
 
 	<p>
-		<b>NOTE:</b> Mylyn 3.12 requires <a
+		<b>NOTE:</b> Mylyn 3.13 requires <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907"
 			target="_new"><b>Java 1.6 or later</b></a> and supports <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=412708"
@@ -86,48 +91,6 @@
 	<hr size="1" />
 
 
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="context">Context</a>
-	</h2>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Toggle Focus Active View with Keyboard</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">You can quickly focus or unfocus the active view
-					by pressing Alt+Shift+H. The keybinding can be customized in the
-					preferences.</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="hudson">Hudson/Jenkins Connector</a>
-	</h2>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Jenkins 1.532.2</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Jenkins 1.532.2 is now supported.</p>
-			</td>
-		</tr>
-	</table>
-
-
 	<p>&nbsp;</p>
 	<h2>
 		<a name="gerrit">Gerrit Connector</a>
@@ -137,14 +100,14 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Open Review Navigator from Task Editor</b>
+					<b>Edit Inline Comments</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The Gerrit task editor adds a toolbar button to
-					make it easy open the Review Navigator for the current review.
+				<p align="left">Draft inline comments can be edited and discarded, and inline comments can be replied 
+				to from within the compare editor.</p>
 				<p>
-					<img border="0" src="images/3.12/reviews-navigator.png" />
+					<img border="0" src="images/3.13/reviews-edit-comment.png" />
 				</p>
 			</td>
 		</tr>
@@ -156,11 +119,106 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Gerrit 2.8.5</b>
+					<b>See Review Approvals for the Active Task</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">Gerrit 2.8.5 is now supported.</p>
+				<p align="left">Quickly find all open reviews for the active task and see an overview of their approvals</p>
+				<p>
+					<img border="0" src="images/3.13/gerrit-dashboard-active-task.png" />
+				</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="wikitext">WikiText</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Improved Markdown Support</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Markdown is now supported in the task editor, and WikiText supports converting 
+				documents in any supported markup language to Markdown.</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Generate XHTML</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">WikiText can now output valid XHTML (see 
+				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=438758">bug 438758</a>).</p>
+			</td>
+		</tr>
+	</table>
+	
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="hudson">Hudson/Jenkins Connector</a>
+	</h2>
+
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Remove Build Servers from Builds View</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Build servers can now easily be removed directly from the Builds view.</p>
+				<p>
+					<img border="0" src="images/3.13/builds-delete-server.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Jenkins 1.565.1</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+				Jenkins 1.565.1 is now supported.
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="bugzilla">Bugzilla Connector</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Bugzilla 4.5.5, 4.4.5, 4.2.10, and 4.0.14</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+				Bugzilla 4.5.5, 4.4.5, 4.2.10, and 4.0.14 are now supported.</p>
 			</td>
 		</tr>
 	</table>
@@ -173,7 +231,7 @@
 
 	<p>
 		See <a
-			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.12"
+			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.13"
 			target="_new">porting guide</a> for additional notes on API changes.
 	</p>
 
@@ -181,67 +239,18 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Tasks: Control Fetching of Subtasks</b>
+					<b>Tasks: Display All Person Attributes</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">To allow clients of the framework to control whether queries automatically fetch subtasks,
-				<tt>SynchronizationJob</tt> and <tt>ITaskJobFactory</tt> now have 
-				<tt>setFetchSubtasks</tt> and <tt>getFetchSubtasks</tt> methods.
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=385670">bug
-						385670</a>
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Commons: Configure Maximum Number of Connections</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					Clients can configure the maximum
-					number of http connections (in total and per-host) 
-					using <a href="https://wiki.eclipse.org/Mylyn/FAQ#System_Properties">system properties</a>.
-					<a
-						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=417451">bug
-						417451</a>
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>SOAP transport removed</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					The SOAP transport has been removed: 
-					<a
-						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=421379">bug
-						421379</a>
+				<p align="left">All attributes of kind <tt>TaskAttribute.KIND_PEOPLE</tt> are now displayed in the 
+				People section of the task editor by default: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294413">bug
+						294413</a>
 				</p>
 			</td>
 		</tr>
 	</table>
-	
-	<h1>New in Eclipse Luna</h1>
-	
-	For Mylyn changes since the Eclipse Kepler/Mylyn 3.9 release, see also the New &amp; Noteworthy for <a
-			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a> and <a
-			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>.
 
 </body>
 </html>
